--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 .DS_Store
 linux-notes/.DS_Store
+
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+*.dylib
