--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,7 @@ variables:
   IncrementReleaseTagNumber: $[counter(variables['InitialReleaseTagNumber'], 0)]
 
 
-pool:
-  vmImage: 'ubuntu-latest'
+pool: Default
 
 steps:
 - script: echo 'Hello, world!' > hello.txt
@@ -44,7 +43,7 @@ steps:
     tag: 'v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)'
     changeLogCompareToRelease: 'lastFullRelease'
     changeLogType: 'commitBased'
-    assets: '$(Build.ArtifactStagingDirectory)/*'
+    assets: '$(Build.ArtifactStagingDirectory)/artifacts/*'
     #repositoryName: '$(Build.Repository.Name)' 
     #action: 'create' # Options: create, edit, delete
     #target: '$(Build.SourceVersion)' # Required when action == Create || Action == Edit
