--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,7 +55,7 @@ steps:
     tag: 'li-v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)'
     changeLogCompareToRelease: 'lastFullRelease'
     changeLogType: 'commitBased'
-    assets: '$(Build.ArtifactStagingDirectory)/artifacts/*'
+    assets: '$(Build.ArtifactStagingDirectory)/'
     #repositoryName: '$(Build.Repository.Name)' 
     #action: 'create' # Options: create, edit, delete
     #target: '$(Build.SourceVersion)' # Required when action == Create || Action == Edit
