--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,70 +6,40 @@
 trigger:
 - master
 
-
 variables:
   MajorVersion: 1
   MinorVersion: 0.0
   InitialReleaseTagNumber: 1
   IncrementReleaseTagNumber: $[counter(variables['InitialReleaseTagNumber'], 0)]
 
-
-pool: Default
-
-steps:
-- script: echo 'Hello, world!' > hello.txt
-  displayName: 'Create a file'
-
-- script: echo 'Hello, world!' > hello2.txt
-  displayName: 'Create a file'
-
-- bash: mkdir $(Build.ArtifactStagingDirectory)/artifacts
-
-- bash: cp hello.txt hello2.txt $(Build.ArtifactStagingDirectory)/artifacts
-  displayName: 'Move the file to artifact directory'
-
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/artifacts' 
-    includeRootFolder: false 
-    archiveType: 'tar'
-    tarCompression: 'gz'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/notes_$(MKL)_$(Build.BuildId).tar.gz' 
-    #replaceExistingArchive: true 
-    verbose: true
-    #quiet: # Optional
-
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: $(Build.ArtifactStagingDirectory)
-    artifactName: notes_$(Build.BuildId)
-
-- task: GitHubRelease@0
-  inputs:
-    gitHubConnection: 'goyalankit'
-    repositoryName: '$(Build.Repository.Name)'
-    action: 'create'
-    target: '$(Build.SourceVersion)'
-    tagSource: 'manual'
-    tag: 'li-v$(MajorVersion).$(MinorVersion).$(IncrementReleaseTagNumber)'
-    changeLogCompareToRelease: 'lastFullRelease'
-    changeLogType: 'commitBased'
-    assets: '$(Build.ArtifactStagingDirectory)/*.tar.gz'
-    #repositoryName: '$(Build.Repository.Name)' 
-    #action: 'create' # Options: create, edit, delete
-    #target: '$(Build.SourceVersion)' # Required when action == Create || Action == Edit
-    #tagSource: 'auto' # Required when action == Create# Options: auto, manual
-    #tagPattern: # Optional
-    #tag: # Required when action == Edit || Action == Delete || TagSource == Manual
-    #title: # Optional
-    #releaseNotesSource: 'file' # Optional. Options: file, input
-    #releaseNotesFile: # Optional
-    #releaseNotes: # Optional
-    
-    #assetUploadMode: 'delete' # Optional. Options: delete, replace
-    #isDraft: false # Optional
-    #isPreRelease: false # Optional
-    #addChangeLog: true # Optional
-    #compareWith: 'lastFullRelease' # Required when addChangeLog == True. Options: lastFullRelease, lastRelease, lastReleaseByTag
-    #releaseTag: # Required when compareWith == LastReleaseByTag
+stages:
+- stage: Build
+  jobs:
+  - job: Build
+    pool:
+      vmImage: 'Ubuntu-16.04'
+    continueOnError: true
+    steps:
+    - script: echo "hello to my first Build"
+- stage: dev_deploy
+  jobs:
+  - deployment: dev_deploy
+    pool:
+      vmImage: 'Ubuntu-16.04'
+    environment: 'dev-hello'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo "hello, dev world !!!"
+- stage: qa_deploy
+  jobs:
+  - deployment: qa_deploy
+    pool:
+      vmImage: 'Ubuntu-16.04'
+    environment: 'qa-hello'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo "hello, qa world !!!"
