--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,14 @@ stages:
     continueOnError: true
     steps:
     - script: echo "hello to my first Build"
+
+  - job: Build2
+    pool:
+      vmImage: 'Ubuntu-16.04'
+    continueOnError: true
+    steps:
+    - script: echo "hello to my first Build"
+
 - stage: dev_deploy
   jobs:
   - deployment: dev_deploy
