--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,18 @@ stages:
     - script: echo "hello to my first Build"
 
   - job: Build2
-    pool:
-      vmImage: 'Ubuntu-16.04'
-    continueOnError: true
+    pool: AzurePool            
     steps:
     - script: echo "hello to my first Build"
+    - task: DownloadBuildArtifacts@0
+      inputs:
+        buildType: 'specific'
+        project: 'f264fb05-fdb0-48f5-8413-4707614a8f78'
+        pipeline: '1'
+        buildVersionToDownload: 'latest'
+        downloadType: 'single'
+        downloadPath: '$(System.ArtifactsDirectory)'
+        artifactName: 'tensorflow_java_192.tar.gz'
 
 - stage: dev_deploy
   jobs:
