--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,13 @@ stages:
         downloadPath: '$(System.ArtifactsDirectory)'
         artifactName: 'tensorflow_java_192.tar.gz'
 
+    - task: ExtractFiles@1
+      inputs:
+        archiveFilePatterns: '*.tar.gz'
+        destinationFolder: '$(agent.builddirectory)'
+        cleanDestinationFolder: false
+      
+
 - stage: dev_deploy
   jobs:
   - deployment: dev_deploy
