--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,13 +15,6 @@ variables:
 stages:
 - stage: Build
   jobs:
-  - job: Build
-    pool:
-      vmImage: 'Ubuntu-16.04'
-    continueOnError: true
-    steps:
-    - script: echo "hello to my first Build"
-
   - job: Build2
     pool: AzurePool            
     steps:
@@ -38,30 +31,7 @@ stages:
 
     - task: ExtractFiles@1
       inputs:
-        archiveFilePatterns: '*.tar.gz'
+        archiveFilePatterns: '$(System.ArtifactsDirectory)/tensorflow_java_192.tar.gz'
         destinationFolder: '$(agent.builddirectory)'
         cleanDestinationFolder: false
       
-
-- stage: dev_deploy
-  jobs:
-  - deployment: dev_deploy
-    pool:
-      vmImage: 'Ubuntu-16.04'
-    environment: 'dev-hello'
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - script: echo "hello, dev world !!!"
-- stage: qa_deploy
-  jobs:
-  - deployment: qa_deploy
-    pool:
-      vmImage: 'Ubuntu-16.04'
-    environment: 'qa-hello'
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - script: echo "hello, qa world !!!"
