--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ stages:
         downloadPath: '$(System.ArtifactsDirectory)'
     - task: ExtractFiles@1
       inputs:
-        archiveFilePatterns: '$(System.ArtifactsDirectory)/tensorflow_java_192.tar.gz/tensorflow_java_192.tar.gz'
+        archiveFilePatterns: '$(System.ArtifactsDirectory)/*.tar.gz'
         destinationFolder: '$(agent.builddirectory)'
         cleanDestinationFolder: false
       
