--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,4 +38,6 @@ stages:
         archiveFilePatterns: '$(System.ArtifactsDirectory)/*.tar.gz'
         destinationFolder: '$(agent.builddirectory)/p'
         cleanDestinationFolder: false
-      
+
+    - script: sudo bash /opt/linkedin/build_tf.sh --artifact_dir=$(System.builddirectory)/p --tensorflow_version='2.0.0' --lang='java'
+      displayName: Create jar
