--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,9 +29,12 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
+        echo "Key1: $KEY1"
         cat > filename <<- "EOF"
         file contents ${KEY1}
+        file contents $KEY1
         more contents ${KEY2}
+        more contents "$KEY2"
         EOF
       env:
         KEY1: "value1"
