--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,8 +6,9 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    tags: 
-      - 'v*.*.*'
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,6 +25,18 @@ jobs:
     # Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo Hello, world!
+
+    - name: Configure GPG Key and create gradle properties file
+      run: |
+        mkdir -p ${HOME}/.gnupg/ ${HOME}/.gradle
+        # Decode and create the private key file
+        printf "${GPG_SIGNING_KEY}" | base64 --decode > ${HOME}/.gnupg/private.key
+        chmod 500 ${HOME}/.gnupg/private.key
+        # Try importing the key.
+        gpg --batch --import ${HOME}/.gnupg/private.key
+        EOF
+      env:
+        GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
